' Generated by UML Generator
' Encoded: XL7B2i8m4BpdA_ROAW7FFKW5Bnu4eVv0J9OQRDEIReie-kqcVM63u2MmCvEPoIPjI5Xgou8rDsrgOKK9iX1DioEo-j8I7cHbClr0sB2hLWXIMraWOxqAzfLiIpHq54RaQE7903ZXdHB8d879_LndQ3ijCO6JWmZjE7kEksCTk4JV1h4N2ANE3biI2NILLfwklUra4at4QoevflRb1krFer0_jkollUi1cvymTr-Ae_XlHhYo5UVXNe82d6_ds1IDSj_r0G
' URL: http://www.plantuml.com/plantuml/uml/XL7B2i8m4BpdA_ROAW7FFKW5Bnu4eVv0J9OQRDEIReie-kqcVM63u2MmCvEPoIPjI5Xgou8rDsrgOKK9iX1DioEo-j8I7cHbClr0sB2hLWXIMraWOxqAzfLiIpHq54RaQE7903ZXdHB8d879_LndQ3ijCO6JWmZjE7kEksCTk4JV1h4N2ANE3biI2NILLfwklUra4at4QoevflRb1krFer0_jkollUi1cvymTr-Ae_XlHhYo5UVXNe82d6_ds1IDSj_r0G
' Generated on: 2026-03-19T15:01:40.799432500

@startuml
skinparam classAttributeIconSize 0
hide circle

class DocumentManager {
  -text: String
  -pService: PrinterService
  --
  +DocumentManager(text: String)
  +addText(text: String): void
  +printDocument(): void
}

class Printer {
  +print(text: String): void
}

class PrinterService {
  ~printer: Printer
  --
  +PrinterService()
  +print(text: String): void
}

DocumentManager *-- PrinterService
PrinterService --> Printer
@enduml